--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,81 @@
 {% extends "network/layout.html" %}
-
+{% load crispy_forms_tags %}
 {% block body %}
     TODO
+    <div class="row">
+        <div class="col-12 col-md-3 pr-4 dont-move">
+            {% for post in posts %}
+                <article class="media content-section hovered-tweet">
+                <div style="width: 100%; word-break: break-all;">
+
+                    <div class="pb-2 row m-0" style="width: 100%; margin-right: 0 !important;">
+                       <div
+                               style="padding-left: 0px !important;"
+                               class="col-8 no-padding d-flex align-items-center">
+                           <a class="mr-2 white-important" href="">
+                               {{ post.author }}
+                           </a>
+                       </div>
+                       <div class="col-4 d-flex flex-row-reverse no-padding align-items-center"
+                            style="padding-right: 0 !important;">
+                           {% if post.author == user %}
+                                <a class="material-icons ml-2"
+                                   style="font-size: 14px"
+                                        href="">clear</a>
+                                <a class="material-icons ml-2"
+                                   style="font-size: 14px"
+                                        href="">update</a>
+                            {%  endif %}
+                       </div>
+                   </div>
+                    <div
+                            class="mb-2"
+                            style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
+                    <a
+                            style="color: rgba(255, 255, 255, 0.5) !important;"
+                            href="">
+                        <p class="mb-4">
+                            {{ post.content }}
+                        </p>
+                    </a>
+
+                        <div class="row">
+                            <div class="col-6" style="display: flex;">
+                                <small style="opacity: 0.4;">
+
+                                    <!-- Like Button Here -->
+                                    <a href="#" ><i class="fas fa-thumbs-up"></i></a> {{post.likes}}   
+
+                                </small>
+                            </div>
+                            <div class="col-6">
+                                <small
+                                        style="opacity: 0.4;"
+                                    class="white-important d-flex full-width flex-row-reverse">
+                                    {{ post.date_posted | date:"H:i l, d.m.y" }}
+                                </small>
+                            </div>
+                        </div>
+
+                </div>
+                </article>
+            {% endfor %}
+
+        </div>
+    </div>
+    <!-- Create Post Here -->
+    <div class="container">
+        <h3 class="white-important">
+            {{  tag_line }}
+        </h3>
+        <form method="POST" class="col-12 col-md-6 no-padding pr-3 pr-md-0">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                {{ form | crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-primary" type="submit">Submit changes</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
