--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -3,6 +3,22 @@
 {% block body %}
     TODO
     <div class="row">
+        
+        <!-- Create Post Here -->
+        <div class="col-12 col-md-6">
+            <h3 class="white-important">
+                {{  tag_line }}
+            </h3>
+            <form method="POST" class="col-12 col-md-6 no-padding pr-3 pr-md-0">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    {{ form | crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-primary" type="submit">Submit changes</button>
+                </div>
+            </form>
+        </div>
         <div class="col-12 col-md-3 pr-4 dont-move">
             {% for post in posts %}
                 <article class="media content-section hovered-tweet">
@@ -60,22 +76,8 @@
                 </div>
                 </article>
             {% endfor %}
-
+            
         </div>
     </div>
-    <!-- Create Post Here -->
-    <div class="container">
-        <h3 class="white-important">
-            {{  tag_line }}
-        </h3>
-        <form method="POST" class="col-12 col-md-6 no-padding pr-3 pr-md-0">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                {{ form | crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-primary" type="submit">Submit changes</button>
-            </div>
-        </form>
-    </div>
+
 {% endblock %}
