--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,7 +1,6 @@
 {% extends "network/layout.html" %}
 {% load crispy_forms_tags %}
 {% block body %}
-    TODO
     <div class="row">
         <div class="col-12 col-md-3 pr-4 dont-move">
             <a href="/"> <h2><img class="img-fluid" width="60" src="">Buzzer</h2></a><br>
@@ -11,10 +10,7 @@
             </h3>
             <article class="media content-section" style="height: 140px; width: 100%">
                     <div class="mt-2 d-flex full-width align-items-center">
-                        <img
-                           class="rounded-circle mr-3"
-                           style="width: 90px; height: 90px;"
-                           src="">
+                        <i class="far fa-user-circle fa-7x rounded-circle mr-3 img-fluid"></i>
                         <div>
                             <h4 style="text-align: left" class="white-important">
                                 {{ user.username }}
@@ -30,27 +26,36 @@
                     <div class="col-6">
                             Following
                     </div>
-                    
+                    <div class="col-6">
+                        <h3 class="white-important follow-click">
+                                {{ profileuser.totalfollower }}
+                        </h3>
+                    </div>
+                     <div class="col-6">
+                            <h3 class="white-important follow-click">
+                                {{ user.username.totalfollowing }}
+                            </h3>
+                    </div>
                 </div>
             </article>
             </div>
         </div>
-        <!-- Create Post Here -->
-        <div class="col-12 col-md-6">
-            <h3 class="white-important">
-                {{  tag_line }}
-            </h3>
-            <form method="POST" class="col-12 col-md-6 no-padding pr-3 pr-md-0">
-                {% csrf_token %}
-                <fieldset class="form-group">
-                    {{ form | crispy }}
-                </fieldset>
-                <div class="form-group">
-                    <button class="btn btn-outline-primary" type="submit">Submit changes</button>
+        <!-- Posts Here -->
+        <div class="col-12 col-md-6 scrollable" >
+            <div class="full-width row">
+                <div class="col-6">
+                    <h3 class="white-important mb-3">
+                        Buzzes
+                    </h3>
                 </div>
-            </form>
-        </div>
-        <div class="col-12 col-md-3 pr-4 dont-move">
+                 <div class="col-6 no-padding">
+                    <h6
+                            style="position: absolute; bottom: 0; right: 0"
+                            class="white-important mb-3">
+                        number
+                    </h6>
+                </div>
+            </div>
             {% for post in posts %}
                 <article class="media content-section hovered-tweet">
                 <div style="width: 100%; word-break: break-all;">
@@ -108,6 +113,21 @@
                 </article>
             {% endfor %}
             
+        </div>
+        <!-- Create Post Here -->
+        <div class="col-12 col-md-3 dont-move">
+            <h3 class="white-important">
+                {{  tag_line }}
+            </h3>
+            <form method="POST">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    {{ form | crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-primary" type="submit">Submit changes</button>
+                </div>
+            </form>
         </div>
     </div>
 
