--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -28,12 +28,12 @@
                     </div>
                     <div class="col-6">
                         <h3 class="white-important follow-click">
-                                {{ profileuser.totalfollower }}
+                               {{ followers }} 
                         </h3>
                     </div>
                      <div class="col-6">
                             <h3 class="white-important follow-click">
-                                {{ user.username.totalfollowing }}
+                                {{ following }}
                             </h3>
                     </div>
                 </div>
