--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -52,11 +52,12 @@
                     <h6
                             style="position: absolute; bottom: 0; right: 0"
                             class="white-important mb-3">
-                        number
+                        {{ page_obj.start_index }} - {{ page_obj.end_index }} of
+                        {{ paginator.count }}
                     </h6>
                 </div>
             </div>
-            {% for post in posts %}
+            {% for post in page_obj %}
                 <article class="media content-section hovered-tweet">
                 <div style="width: 100%; word-break: break-all;">
 
@@ -112,7 +113,33 @@
                 </div>
                 </article>
             {% endfor %}
-            
+            <div class="full-width d-flex justify-content-center">
+             
+                    {% if page_obj.has_previous %}
+                        <a class="btn btn-sm btn-outline-secondary mb-4 mr-2"
+                                href="?page=1">First</a>
+                        <a class="btn btn-sm btn-outline-secondary mb-4 mr-2"
+                                href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    {% endif %}
+
+                    {% for num in page_obj.paginator.page_range %}
+                        {% if page_obj.number == num %}
+                            <a class="btn btn-sm btn-info mb-4 mr-2"
+                                href="?page={{ num }}">{{ num }}</a>
+                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                            <a class="btn btn-sm btn-outline-secondary mb-4 mr-2"
+                                href="?page={{ num }}">{{ num }}</a>
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if page_obj.has_next %}
+                        <a class="btn btn-sm btn-outline-secondary mb-4 mr-2"
+                                href="?page={{ page_obj.next_page_number }}">Next</a>
+                           <a class="btn btn-sm btn-outline-secondary mb-4 mr-2"
+                            href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+                    {% endif %}
+              
+            </div>
         </div>
         <!-- Create Post Here -->
         <div class="col-12 col-md-3 dont-move">
