--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,5 +1,4 @@
 {% extends "network/layout.html" %}
-{% load crispy_forms_tags %}
 {% block body %}
     <div class="row">
         <div class="col-12 col-md-3 pr-4 dont-move">
@@ -174,4 +173,8 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block script %}
+    <script type="text/javascript" src="{% static 'network/inbox.js' %}"></script>
 {% endblock %}
