--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -81,11 +81,10 @@
                        </div>
                    </div>
                     <div class="mb-2" style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
-                    <a style="color: rgba(255, 255, 255, 0.5) !important;" href="">
-                        <p  id="post-{{post.id}}" class="mb-4"> {{ post.content }} </p> 
+                        <a style="color: rgba(255, 255, 255, 0.5) !important;" href="">
+                        <p  id="post-{{post.id}}" class="mb-4"> {{ post.content }} </p> </a>
                        <textarea class="form-control mb-2" id="edit-box-{{post.id}}" name="edit-box" style="display:none;"></textarea>
                         <button id="edit-btn-{{post.id}}" class="btn btn-primary" style="display:none;">Save</button>
-                    </a>
                         <div class="row">
                             <div class="col-6" style="display: flex;">
                                 <small style="opacity: 0.4;">
@@ -100,7 +99,7 @@
                                 </small>
                             </div>
                         </div>
-
+                    
                 </div>
                 </article>
             {% endfor %}
@@ -135,7 +134,7 @@
         <!-- Create Post Here -->
         <div class="col-12 col-md-3 dont-move">
             <h3 class="white-important">
-                {{  tag_line }}
+               Create Your Buzz Here
             </h3>
             <form method="POST">
                 {% csrf_token %}
