--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-12 col-md-3 pr-4 dont-move">
-            <a href="/"> <h2><img class="img-fluid" width="60" src="">Buzzer</h2></a><br>
+            <a href="/"> <h2><img class="img-fluid" width="60" src="{% static 'network/bee-logo-1.png' %}">Buzzer</h2></a><br>
             <div class="profile-section">
             <h3 class="white-important p-2">
                 Profile
@@ -22,26 +22,6 @@
                             </h4>
                         </div>
                     </div>
-            </article>
-            <article class="media content-section">
-                <div class="row full-width pl-2">
-                    <div class="col-6">
-                            Followers
-                    </div>
-                    <div class="col-6">
-                            Following
-                    </div>
-                    <div class="col-6">
-                        <h3 class="white-important follow-click">
-                               {{ followers }} 
-                        </h3>
-                    </div>
-                     <div class="col-6">
-                            <h3 class="white-important follow-click">
-                                {{ following }}
-                            </h3>
-                    </div>
-                </div>
             </article>
             </div>
         </div>
