--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -97,3 +97,11 @@ input:focus {
   border-left: 1px solid #2d3741;
   border-right: 1px solid #2d3741;
 }
+
+.biglogo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 40%;
+  padding-bottom: 40%;
+  opacity: 0.2;
