liked post icon toggles into thumbs down

--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -13,7 +13,7 @@
                             <i class="far fa-user-circle fa-7x rounded-circle mr-3 img-fluid"></i>
                             <div>
                                 <h4 style="text-align: left" class="white-important">
-                                    {{ user.username }}
+                                    {{ user.username | title }}
                                 </h4>
                             </div>
                         </div>
