--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -56,21 +56,19 @@
                             
                             {% if post.author == user %}
                                 <a class="material-icons ml-2" style="font-size: 14px" href="">clear</a>
-                                <button id="edit" onclick="edit('{{ post.id }}')" class="text-primary">Edit</button>
+                                <a id="edit" onclick="edit('{{ post.id }}')" class="material-icons ml-2" style="font-size: 14px">edit</a>
                             {%  endif %} 
                        </div>
                    </div>
                     <div class="mb-2" style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
-                        <a style="color: rgba(255, 255, 255, 0.5) !important;" href="">
-                        <p  id="post-{{post.id}}" class="mb-4"> {{ post.content }} </p> </a>
+                        <p style="color: rgba(255, 255, 255, 0.5) !important;"  id="post-{{post.id}}" class="mb-4"> {{ post.content }} </p> 
                         <textarea class="form-control mb-2" id="edit-box-{{post.id}}" name="edit-box" style="display:none;"></textarea>
-                        <button id="edit-btn-{{post.id}}" class="btn btn-primary" style="display:none;">Save</button>
+                        <button id="edit-btn-{{post.id}}" class="btn btn-outline-secondary" style="display:none;">Save</button>
                         <div class="row">
                             <div class="col-6" style="display: flex;">
                                 <small style="opacity: 0.4;">
                                     <!-- Like Button Here -->
-                                    <a href="#"  ><i  id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" ></i></a><span id="like-count-{{post.id}}"> {{post.likes}} </span> 
-                                    
+                                    <a><i  type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{post.likes}} </span>    
                                 </small>
                             </div>
                             <div class="col-6">
@@ -113,6 +111,7 @@
         </div>
         <!-- Create Post Here -->
         <div class="col-12 col-md-3 dont-move">
+            {% if user.is_authenticated %}
             <h3 class="white-important">
                Create Your Buzz Here
             </h3>
@@ -122,9 +121,13 @@
                     {{ form }}
                 </fieldset>
                 <div class="form-group">
-                    <button class="btn btn-outline-primary" type="submit">Submit changes</button>
+                    <button class="btn btn-outline-secondary" type="submit">Submit changes</button>
                 </div>
             </form>
+            {% else %}
+            <!-- bigger logo)-->
+            <img class="biglogo"  src="{% static 'network/bee-logo-2.png' %}">
+            {% endif %}
         </div>
     </div>
 
