--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -5,7 +5,7 @@
     <head>
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        
+         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
@@ -13,7 +13,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Network</a>
+            <a class="navbar-brand" href="/">Home</a>
           
             <div>
               <ul class="navbar-nav mr-auto">
@@ -44,9 +44,11 @@
             </div>
           </nav>
         
-        <div class="body">
-            {% block body %}
-            {% endblock %}
+        <div class="container-fluid">
+            <div class="body">
+                {% block body %}
+                {% endblock %}
+            </div>
         </div>
     </body>
 </html>
