--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -55,7 +55,7 @@
                        <div class="col-4 d-flex flex-row-reverse no-padding align-items-center" style="padding-right: 0 !important;">
                             
                             {% if post.author == user %}
-                                <a class="material-icons ml-2" style="font-size: 14px" href="">clear</a>
+                                <a id="deletepost" onclick="deletepost('{{ post.id }}')" class="material-icons ml-2" style="font-size: 14px">clear</a>
                                 <a id="edit" onclick="edit('{{ post.id }}')" class="material-icons ml-2" style="font-size: 14px">edit</a>
                             {%  endif %} 
                        </div>
