--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,11 +1,9 @@
 {% extends "network/layout.html" %}
-
 {% load static %}
-
 {% block body %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'network/inbox.js' %}"></script>
+    <script type="text/javascript" src="{% static 'network/index.js' %}"></script>
 {% endblock %}
 
     <div class="row">
@@ -34,7 +32,7 @@
                             {% endif %}
                         {% else %}
                         <div class="text-right">
-                            <a class="btn-config btn" href=""><i class="fa fa-cog"></i></a>
+                            <a class="btn-config btn" href=""></a>
                         </div>
                         {% endif %}
                     </div>
@@ -106,33 +104,20 @@
                        <div class="col-4 d-flex flex-row-reverse no-padding align-items-center"
                             style="padding-right: 0 !important;">
                            {% if post.author == user %}
-                                <a class="material-icons ml-2"
-                                   style="font-size: 14px"
-                                        href="">clear</a>
-                                <a class="material-icons ml-2"
-                                   style="font-size: 14px"
-                                        href="">update</a>
+                                <a id="deletepost" onclick="deletepost('{{ post.id }}')" class="material-icons ml-2" style="font-size: 14px" href="">clear</a>
+                                <a id="edit" onclick="edit('{{ post.id }}')" class="material-icons ml-2" style="font-size: 14px">edit</a>
                             {%  endif %}
                        </div>
                    </div>
-                    <div
-                            class="mb-2"
-                            style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
-                    <a
-                            style="color: rgba(255, 255, 255, 0.5) !important;"
-                            href="">
-                        <p class="mb-4">
-                            {{ post.content }}
-                        </p>
-                    </a>
-
+                    <div class="mb-2" style="width: 100%; height: 1px; background-color: rgba(255, 255, 255, 0.1)"></div>
+                        <p style="color: rgba(255, 255, 255, 0.5) !important;"  id="post-{{post.id}}" class="mb-4"> {{ post.content }} </p> 
+                        <textarea class="form-control mb-2" id="edit-box-{{post.id}}" name="edit-box" style="display:none;"></textarea>
+                        <button id="edit-btn-{{post.id}}" class="btn btn-outline-secondary" style="display:none;">Save</button>
                         <div class="row">
                             <div class="col-6" style="display: flex;">
                                 <small style="opacity: 0.4;">
-
                                     <!-- Like Button Here -->
-                                    <a href="#" ><i class="fas fa-thumbs-up"></i></a> {{post.likes}}   
-
+                                    <a><i  type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{post.likes}} </span>  
                                 </small>
                             </div>
                             <div class="col-6">
