--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -77,7 +77,7 @@
                                 <small style="opacity: 0.4;">
 
                                     <!-- Like Button Here -->
-                                    <a href="#" ><i class="fas fa-thumbs-up"></i></a> {{post.likes}}   
+                                    <a ><i type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" style="color: grey;"></i></a> {{post.likes}}   
 
                                 </small>
                             </div>
