--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -68,7 +68,7 @@
                             <div class="col-6" style="display: flex;">
                                 <small style="opacity: 0.4;" class="like">
                                     <!-- Like Button Here -->
-                                    <a><i  type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{post.likes}} </span>  
+                                    <a id="smth"><i type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" style="color: grey;" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{ post.likes }} </span>  
                                 </small>
                             </div>
                             <div class="col-6">
