--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -117,7 +117,7 @@
                             <div class="col-6" style="display: flex;">
                                 <small style="opacity: 0.4;">
                                     <!-- Like Button Here -->
-                                    <a><i  type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{post.likes}} </span>  
+                                    <a><i  type='button' id="like-btn-{{post.id}}" onclick="like('{{ post.id }}')" class="fas fa-thumbs-up" style="color: grey;" ></i></a><span id="like-count-{{post.id}}" class="likenumber">  {{post.likes}} </span>  
                                 </small>
                             </div>
                             <div class="col-6">
